2005-07-15  Mark Wielaard  <mark@klomp.org>

	* lib/standard.omit: Only list gnu/javax/swing/plaf/gtk/.*java and
	README explicitly, not the icons.
	* examples/gnu/classpath/examples/swing/GNULookAndFeel.java
	(getDefaults): Add Tree closed, leaf and open icons.

2005-07-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* doc/vmintegration.texinfo:
	Updated 'Classpath Hooks' section.

2005-07-15  Mark Wielaard  <mark@klomp.org>

	* hacking.texinfo: @setchapternewpage off.
	* vmintegration.texinfo: Likewise.
	* www.gnu.org/docs/Makefile: texi2info --ifinfo --ifhtml.

2005-07-14  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/java/awt/peer/gtk/GtkChoicePeer.java (choicePostItemEvent):
	Rename to postChoiceItemEvent.
	* gnu/java/awt/peer/gtk/GtkComponentPeer.java (realize): New method.
	(setNativeEventMask): Likewise.
	* gnu/java/awt/peer/gtk/GtkGenericPeer.java (printCurrentThread): New method.
	* gnu/java/awt/peer/gtk/GtkWindowPeer.java (realize): New method.
	* include/gnu_java_awt_peer_gtk_GtkComponentPeer.h: Regenerate.
	* include/gnu_java_awt_peer_gtk_GtkWindowPeer.h: Likewise.
	* native/jni/gtk-peer/gtkpeer.h: Move widget-specific macro,
	variable and function declarations into the widget-specific file.
	Add cp_gtk_ namespace prefix to external symbols.
	(cp_gtk_graphics2d_init_jni): New function.
	(cp_gtk_graphics_init_jni): Likewise.
	(cp_gtk_button_init_jni): Likewise.
	(cp_gtk_checkbox_init_jni): Likewise.
	(cp_gtk_choice_init_jni): Likewise.
	(cp_gtk_component_init_jni): Likewise.
	(cp_gtk_list_init_jni): Likewise.
	(cp_gtk_menuitem_init_jni): Likewise.
	(cp_gtk_scrollbar_init_jni): Likewise.
	(cp_gtk_textcomponent_init_jni): Likewise.
	(cp_gtk_window_init_jni): Likewise.
	(cp_gtk_component_connect_expose_signals): Likewise.
	(cp_gtk_component_connect_focus_signals): Likewise.
	(cp_gtk_component_connect_mouse_signals): Likewise.
	(cp_gtk_component_connect_signals): Likewise.
	(cp_gtk_textcomponent_connect_signals): Likewise.